--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
-    "vite": "^3.2.3"
-  }
+	"name": "vite-project",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"husky": "^3.1.0",
+		"postcss": "^8.4.19",
+		"pretty-quick": "^3.1.3",
+		"tailwindcss": "^3.2.4",
+		"vite": "^3.2.3"
+	}
 }
