--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
 		"pretty-quick": "^3.1.3",
 		"tailwindcss": "^3.2.4",
 		"vite": "^3.2.3"
+	},
+	"dependencies": {
+		"moment": "^2.29.4"
 	}
 }
