--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.13",
 		"husky": "^3.1.0",
 		"postcss": "^8.4.19",
@@ -17,6 +18,7 @@
 		"vite": "^3.2.3"
 	},
 	"dependencies": {
+		"flowbite-datepicker": "^1.2.2",
 		"moment": "^2.29.4"
 	}
 }
